third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/test_positional_field_api.exp
processed 10 tasks
task 0 lines 2-11:  publish [module 0x42::m1 {]
task 1 lines 13-94:  publish [module 0x42::m2 {]
Error: compilation errors:
 bug: bytecode verification failed with unexpected status code `CALL_BORROWED_MUTABLE_REFERENCE_ERROR`:
Error message: none
   ┌─ TEMPFILE1:76:13
   │
76 │         let NestedPair(p, w) = &mut np;
   │             ^^^^^^^^^^^^^^^^
   │
   = please consider reporting this issue (see https://aptos.dev/en/build/smart-contracts/compiler_v2#reporting-an-issue)


task 2 lines 97-97:  run 0x42::m2::test_borrow_pair_fields
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 3 lines 99-99:  run 0x42::m2::test_borrow_wrapper_field
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 4 lines 101-101:  run 0x42::m2::test_borrow_nested_pair_fields
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 5 lines 103-103:  run 0x42::m2::test_borrow_vecwrap_element
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 6 lines 105-105:  run 0x42::m2::test_mut_borrow_pair
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 7 lines 107-107:  run 0x42::m2::test_mut_borrow_vecwrap_element
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 8 lines 109-109:  run 0x42::m2::test_mut_borrow_nestedpair
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 9 lines 111-111:  run 0x42::m2::test_mut_borrow_nestedpair_2
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
